OpenAPI Spec erweitert mit Update und delete + Controllers
